2013-11-21  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/quote-view.c: Replaced GdkPixmap by cairo_surface_t.
	* client/gtk/settingscreen.c, client/gtk/plenty.c: Replaced GTK_OBJECT
	by G_OBJECT for signal handlers.
	* client/gtk/gui.c: Gtk+3 does not require resize grips.

2013-11-19  Roland Clobus <rclobus@rclobus.nl>
	* common/Makefile.am: Build version.h when needed.
	* client/gtk/connect.c: GtkObject->GtkAdjustment (for Gtk+3).
	* common/gtk/theme.c: Fixed compiler warning (due to Gtk+3 port).

2013-11-17  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Enable (experimental) support for Gtk+3.
	* client/gtk/frontend.c, common/gtk/colors.c, common/gtk/common_gtk.h,
	common/gtk/player-icon.c, common/gtk/theme.c, common/gtk/theme.h:
	Ported colormap to Gtk+3. Fixed a keycode.
	* client/gtk/gui.c, common/gtk/guimap.c, common/gtk/guimap.h,
	common/gtk/select-game.c: Replaced pixmap in guimap.

2013-10-30  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/pioneers.nsi.in: Fixed installing style-ai.svg, see 2013-06-07.

2013-10-26  Roland Clobus <rclobus@rclobus.nl>
	* autogen.sh: Fixed --fhs argument handling.

2013-10-12  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 15.2

2013-10-12  Roland Clobus <rclobus@rclobus.nl>
	* Released 15.1.

2013-10-12  Roland Clobus <rclobus@rclobus.nl>
	* client/help/C/Makefile.am, client/help/C/pioneers.xml: Use xmllint to
	reformat the xml help file.
	* client/help/C/pioneers.xml: Updated the sections about:
	    - Port forwarding
            - The computer player
	    - The server
	* NEWS, client/ai/lobbybot.c, docs/README.release: Prepare for the
	release.

2013-10-03  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/discard.c: Fixed compiler warning.
	* macros/gnome-autogen.sh: Synchronised from gnome-common 3.10.0-1,
	which adds support for automake 1.14.
	* autogen.sh: Added --fhs command line option to set the FHS paths.
	* client/help/C/Makefile.am: Updated the targets to build and clean the