@@ -47,7 +47,7 @@ typedef struct {
 	gint prev_assets[NO_RESOURCE];	/* remember previous resources */
 	gint assets[NO_RESOURCE];	/* our resources */
 	gint gold;		/* how much gold will we recieve? */
-	DevelDeck *devel;	/* development cards we own */
+	Deck *devel;		/* development cards we own */
 	GList *special_points;	/* points from special actions */
 	gint special_points_next_id;	/* Next id for the special points */
 	gint discard_num;	/* number of resources we must discard */
