@@ -665,7 +665,7 @@ void turn_next_player(Game * game)
 	game->curr_player = player->num;
 	game->rolled_dice = FALSE;
 	game->bought_develop = FALSE;
-	game->num_playable_cards = devel_deck_count(player->devel);
+	game->num_playable_cards = deck_count(player->devel);
 	player->build_list = buildrec_free(player->build_list);
 	game->params->map->has_moved_ship = FALSE;
 
